--- a/ApiPerfComparison/appsettings.json
+++ b/ApiPerfComparison/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-secure-key-here-1234567890_xxsfa4564@##%^&&",
+    "Issuer": "https://localhost:7000/",
+    "Audience": "https://localhost:7000/"
+  }
 }
