--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /TestProject1/.vs/TestProject1
 /.vs/ApiPerfComparison/v17
 /.vs/ApiPerfComparison/config
+/.vs
+/ApiPerfComparison/.vs/ProjectEvaluation
