--- a/ApiPerfComparison/appsettings.json
+++ b/ApiPerfComparison/appsettings.json
@@ -1,14 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore.Authentication": "Debug",
+      "Microsoft.AspNetCore.Authorization": "Debug",
+      "Microsoft.Hosting.Lifetime": "Trace"
     }
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "your-secure-key-here-1234567890_xxsfa4564@##%^&&",
-    "Issuer": "https://localhost:7000/",
-    "Audience": "https://localhost:7000/"
+    "Key": "Gh8SP4un34-zSAjARlVjpKFBhHXmQEXHvrIfc0mh5Vk=",
+    "Issuer": "https://localhost:7000",
+    "Audience": "https://localhost:7000"
   }
 }
