Add Cqrs to Minimal Api

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /ApiPerfComparison/.vs/ProjectEvaluation
 /TestJwt/bin/Debug/net9.0
 /TestJwt/obj
+/MinimalApiUsingMediatR/bin/Debug/net9.0
+/.cr/personal/FavoritesList
+/MinimalApiUsingMediatR/obj/Debug/net9.0
+/MinimalApiUsingMediatR/obj
