Add Mediatr Behaviours

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /.cr/personal/FavoritesList
 /MinimalApiUsingMediatR/obj/Debug/net9.0
 /MinimalApiUsingMediatR/obj
+/MediatRBehaviors/bin/Debug/net9.0
+/MediatRBehaviors/obj/Debug/net9.0
+/MediatRBehaviors/obj
